erDiagram
  USERS {
    UUID id PK
    STRING username
    STRING email
    STRING preferredName
    STRING bio
    STRING avatarUrl
    TIMESTAMP createdAt
    TIMESTAMP updatedAt
  }
  
  GALLERY_ALBUMS {
    UUID id PK
    UUID userId FK
    STRING title
    STRING description
    UUID coverImageId FK
    TIMESTAMP createdAt
    TIMESTAMP lastUpdatedAt
  }
  
  GALLERY_IMAGES {
    UUID id PK
    UUID userId FK
    STRING title
    STRING description
    JSONB tags
    STRING imageUrl
    UUID albumId FK
    BOOLEAN flagged
    TIMESTAMP createdAt
    TIMESTAMP lastUpdatedAt
  }
  
  GALLERY_FLAGS {
    UUID id PK
    UUID imageId FK
    UUID userId FK
    STRING reason
    TIMESTAMP createdAt
    TIMESTAMP lastUpdatedAt
  }
  
  MOC_INSTRUCTIONS {
    UUID id PK
    UUID userId FK
    STRING title
    STRING description
    JSONB tags
    STRING thumbnailUrl
    TIMESTAMP createdAt
    TIMESTAMP updatedAt
  }
  
  MOC_FILES {
    UUID id PK
    UUID mocId FK
    STRING fileType
    STRING fileUrl
    STRING originalFilename
    STRING mimeType
    TIMESTAMP createdAt
  }
  
  MOC_GALLERY_IMAGES {
    UUID id PK
    UUID mocId FK
    UUID galleryImageId FK
  }
  
  MOC_GALLERY_ALBUMS {
    UUID id PK
    UUID mocId FK
    UUID galleryAlbumId FK
  }
  
  WISHLIST_ITEMS {
    UUID id PK
    UUID userId FK
    STRING title
    STRING description
    STRING productLink
    STRING imageUrl
    STRING sortOrder
    TIMESTAMP createdAt
    TIMESTAMP updatedAt
  }
  
  MOC_PARTS_LISTS {
    UUID id PK
    UUID mocId FK
    UUID fileId FK
    STRING title
    STRING description
    BOOLEAN built
    BOOLEAN purchased
    STRING inventoryPercentage
    STRING totalPartsCount
    STRING acquiredPartsCount
    STRING costEstimate
    STRING actualCost
    STRING notes
    TIMESTAMP createdAt
    TIMESTAMP updatedAt
  }
  
  %% User relationships
  USERS ||--o{ GALLERY_ALBUMS : owns
  USERS ||--o{ GALLERY_IMAGES : uploads
  USERS ||--o{ GALLERY_FLAGS : flags
  USERS ||--o{ MOC_INSTRUCTIONS : creates
  USERS ||--o{ WISHLIST_ITEMS : maintains
  
  %% Gallery relationships
  GALLERY_ALBUMS ||--o{ GALLERY_IMAGES : contains
  GALLERY_IMAGES ||--o{ GALLERY_FLAGS : is_flagged_by
  GALLERY_ALBUMS ||--o| GALLERY_IMAGES : cover_image
  
  %% MOC relationships
  MOC_INSTRUCTIONS ||--o{ MOC_FILES : has_files
  MOC_INSTRUCTIONS ||--o{ MOC_GALLERY_IMAGES : links_to_images
  MOC_INSTRUCTIONS ||--o{ MOC_GALLERY_ALBUMS : links_to_albums
  MOC_INSTRUCTIONS ||--o{ MOC_PARTS_LISTS : has_parts_lists
  
  %% Parts list relationships
  MOC_PARTS_LISTS }o--o| MOC_FILES : optional_file_reference
  
  %% Join table relationships
  MOC_GALLERY_IMAGES }o--|| GALLERY_IMAGES : references
  MOC_GALLERY_ALBUMS }o--|| GALLERY_ALBUMS : references 